style.css
/* ////////////////// Keyframes ////////////////// */
/* Story Choosing Appering */
@keyframes ChooseStory {
    from {
        opacity: 0;
    }

    top {
        opacity: 1;
    }

}

/* //////////////////////// */
/* Paragraph on first page */
@keyframes StartingText {
    from {
        top: 750px;
    }

    to {
        top: 550px;
    }

}

/* /////////// */
/* Right Side */
@keyframes Scorlling_BCloud1 {
    from {
        left: 800px;
    }

    to {
        left: 1300px;
    }

}

@keyframes Scorlling_SCloud1 {
    from {
        left: 1270px;
    }

    to {
        left: 1570px;
    }

}

/* ////////////// */
/* Left Side */
@keyframes Scorlling_BCloud2 {
    from {
        left: 270px;
    }

    to {
        left: -270px;
    }

}

@keyframes Scorlling_SCloud2 {
    from {
        left: 80px;
    }

    to {
        left: -300px;
    }

}

/* ////////////// */
/* Transition */
@keyframes Transition {
    from {
        left: 1820px;
    }

    to {
        left: -200px;
    }

}

/* ////////////// */
/* /////////////////////////////////////////////// */
body {
    margin: 0px;
    background-color: #7678ED;
    overflow-x: hidden;
    scroll-behavior: smooth;
}

/* Ensure elements start in correct position */
html {
    scroll-behavior: smooth;
}

div.navnames {
    display: grid;
    position: fixed;
    place-items: center;
    margin: 0px;
    background-color: #2F2F30;
    width: 100%;
    height: 50px;
    z-index: 4;

}

marquee.tracking-names {
    color: white;
    font-size: 30px;
    font-weight: bold;
    font-family: sans-serif;

}

div.BigLogo {
    padding-top: 100px;
    display: grid;
    place-items: center;

}

img.BigLogoImg {
    width: 1050px;
    height: 500px;
}

/* Big Cloud1 */
div.cloud {
    position: absolute;
    top: 650px;
    left: 800px;
    animation: Scorlling_BCloud1 linear;
    animation-timeline: scroll(y);
    z-index: 1;

}

img.cloudimg1 {
    width: 634px;
    height: 411px;
}

/* /////////// */

/* Big Cloud2 */
/* begin left 270 to -*/
div.cloud2 {
    position: absolute;
    top: 650px;
    left: 270px;
    z-index: 1;
    animation: Scorlling_BCloud2 linear;
    animation-timeline: scroll(y);
}

img.cloudimg2 {
    width: 634px;
    height: 411px;
    z-index: 1;
}

/* /////////// */

/* Small Cloud1 */
div.Scloud1 {
    position: absolute;
    top: 750px;
    left: 1270px;
    animation: Scorlling_SCloud1 linear;
    animation-timeline: scroll(y);
    z-index: 1;
}

img.Scloudimg1 {
    width: 381px;
    height: 226px;
}

/* /////////// */

/* Small Cloud2 */
div.Scloud2 {
    position: absolute;
    top: 750px;
    left: 80px;
    z-index: 2;
    animation: Scorlling_SCloud2 linear;
    animation-timeline: scroll(y);
}

img.Scloudimg2 {
    width: 381px;
    height: 226px;
}

/* /////////// */

div>p.subtitle {
    position: absolute;
    top: 750px;
    left: 33.5%;
    bottom: 30px;
    color: #F6EBD9;
    font-size: 30px;
    font-weight: bold;
    font-family: sans-serif;
    text-shadow: 4px 3px 0px #000000;
    z-index: 0;
    animation: StartingText linear;
    animation-timeline: scroll(y);
}

/* Transition */
div.DTransition {
    position: absolute;
    top: 880px;
    left: 1820px;
    z-index: 2;
    animation: Transition linear;
    animation-timeline: scroll(y);
}

/* //////////// */

div.choose_Story {
    display: grid;
    place-items: center;
    position: absolute;
    top: 850px;
    width: 100%;
    height: 250px;
    background-color: #2F2F30;
    z-index: 3;
}

p.Quote {
    position: absolute;
    font-size: 50px;
    top: 10%;
    left: 6.5%;
    font-family: cursive;
    color: #F6EBD9;
    font-weight: bold;
    text-shadow: 4px 3px 0px #000000;

}

div>p.subtitle2 {
    position: absolute;
    top: 1100px;
    left: 28%;
    font-size: 100px;
    font-family: cursive;
    color: #7678ED;
    font-weight: bolder;
    text-shadow: 4px 3px 0px #000000;
    z-index: 3;
    animation: ChooseStory linear;
    animation-timeline: view();
    animation-range: 0% cover 80%;
    transition: 1s ease;
}

button.Button {
    font-size: 30px;
    font-weight: bolder;
    background-color: #7678ED;
    width: 300px;
    height: 70px;
    border-radius: 30px;
    -webkit-box-shadow: 15px 10px 0px 0px rgba(0, 0, 0, 1);
    -moz-box-shadow: 15px 10px 0px 0px rgba(0, 0, 0, 1);
    box-shadow: 15px 10px 0px 0px rgba(0, 0, 0, 1);
}

div.game1>button {
    position: absolute;
    top: 1370px;
    left: 40%;
    transition-duration: 500ms;
    z-index: 3;
    animation: ChooseStory linear;
    animation-timeline: view();
    animation-range: 0% cover 70%;
    transition: 0.3s ease;
}

div.game1>button:hover {
    top: 1370px;
    left: 39.8%;
    width: 310px;
    height: 75px;
    background-color: brown;
    color: #F6EBD9;
    transition-duration: 500ms;
}

div.game2>button {
    position: absolute;
    top: 1570px;
    left: 40%;
    transition-duration: 500ms;
    z-index: 3;
    animation: ChooseStory linear;
    animation-timeline: view();
    animation-range: 0% cover 40%;
    transition: 1s ease;
}

div.game2>button:hover {
    top: 1570px;
    left: 39.8%;
    width: 310px;
    height: 75px;
    background-color: darkcyan;
    color: #F6EBD9;
    transition-duration: 500ms;
}

div.game3>button {
    position: absolute;
    top: 1770px;
    left: 40%;
    transition-duration: 500ms;
    z-index: 3;
    animation: ChooseStory linear;
    animation-timeline: view();
    animation-range: 0% cover 10%;
    transition: 1.3s ease;
}

div.game3>button:hover {
    top: 1770px;
    left: 39.8%;
    width: 310px;
    height: 75px;
    background-color: darkviolet;
    color: #F6EBD9;
    transition-duration: 500ms;
}

div#menu {
    opacity: 1;
    position: absolute;
    top: 910px;
    width: 100%;
    height: 1080px;
    z-index: 2;
    transition-duration: 500ms;
}

div.S1_img1 {
    position: absolute;
    top: 1490px;
    left: -450px;
    transition: left 0.3s ease;
    z-index: 5;
}

div.S1_img1>img {
    width: 450px;
    height: auto;
}

div.S1_img2 {
    position: absolute;
    top: 1490px;
    left: 1900px;
    transition: left 0.3s ease;
    z-index: 5;
}

div.S1_img2>img {
    width: 500px;
    height: 500px;
}

div.S2_img1 {
    position: absolute;
    top: 1490px;
    left: -700px;
    width: 300px;
    height: 450px;
    transition: left 0.3s ease;
    z-index: 5;
}

div.S2_img1>img {
    width: 100%;
}

div.S2_img2 {
    position: absolute;
    top: 1490px;
    left: 1900px;
    width: 300px;
    height: 450px;
    transition: left 0.3s ease;
    z-index: 5;
}

div.S2_img2>img {
    width: 100%;
}

div.summaryStory {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: #7678ED;
    z-index: 1000;
    display: none;
    overflow: hidden;
}

div.Storysummary {
    position: fixed;
    top: 50%;
    left: 10%;
    transform: translateY(-50%);
    width: 500px;
    height: 350px;
    border-radius: 30px;
    border-style: solid;
    border-color: black;
    border-width: 10px;
    background-color: dimgray;
    background-size: cover;
    z-index: 6;
    transition: 1s ease;
}

div>p#SummaryText {
    position: fixed;
    top: 50%;
    right: 12%;
    transform: translateY(-180px);
    color: black;
    font-size: 90px;
    font-family: cursive;
    font-weight: bolder;
    z-index: 6;
    transition: 1s ease;
    margin: 0;
    text-align: center;
}

div>p#SummaryTextSubtitle {
    position: fixed;
    text-align: center;
    width: 600px;
    top: 50%;
    right: 12%;
    transform: translateY(-50%);
    color: black;
    font-size: 24px;
    font-family: cursive;
    font-weight: bolder;
    z-index: 6;
    transition: 1s ease;
    margin: 0;
    line-height: 1.6;
}

div>button#Back {
    position: fixed;
    top: 50%;
    right: calc(12% + 280px);
    transform: translateY(110px);
    width: 250px;
    height: 60px;
    font-size: 26px;
    transition: all 0.3s ease;
    z-index: 3;
}

div>button#Back:hover {
    background-color: #8B4513 !important;
    transform: translateY(110px) scale(1.05);
}

div>button#Play {
    position: fixed;
    top: 50%;
    right: 12%;
    transform: translateY(110px);
    width: 250px;
    height: 60px;
    font-size: 26px;
    transition: all 0.3s ease;
    z-index: 3;
}

div>button#Play:hover {
    background-color: #8B4513 !important;
    transform: translateY(110px) scale(1.05);
}


/* Responsive Design Fixes */
@media screen and (max-width: 1600px) {
    img.BigLogoImg {
        width: 900px;
        height: 400px;
    }

    div>p.subtitle {
        left: 30%;
        font-size: 26px;
    }

    p.Quote {
        font-size: 40px;
    }

    div>p.subtitle2 {
        font-size: 80px;
        left: 30%;
    }

    /* Game Selection Overlay */
    div.Storysummary {
        width: 500px;
        height: 350px;
    }

    div>p#SummaryText {
        font-size: 80px;
    }

    div>p#SummaryTextSubtitle {
        width: 600px;
        font-size: 22px;
    }
}

@media screen and (max-width: 1366px) {
    img.BigLogoImg {
        width: 800px;
        height: 350px;
    }

    div>p.subtitle {
        left: 28%;
        font-size: 24px;
    }

    p.Quote {
        font-size: 36px;
    }

    div>p.subtitle2 {
        font-size: 70px;
        left: 28%;
    }

    div.game1>button,
    div.game2>button,
    div.game3>button {
        left: 38%;
    }

    div.game1>button:hover,
    div.game2>button:hover,
    div.game3>button:hover {
        left: 37.8%;
    }

    /* Game Selection Overlay */
    div.Storysummary {
        width: 450px;
        height: 320px;
    }

    div>p#SummaryText {
        font-size: 70px;
    }

    div>p#SummaryTextSubtitle {
        width: 550px;
        font-size: 20px;
    }

    button.Button {
        font-size: 26px;
        width: 250px;
        height: 60px;
    }
}

@media screen and (max-width: 1280px) {
    img.BigLogoImg {
        width: 700px;
        height: 300px;
    }

    div>p.subtitle {
        left: 26%;
        font-size: 22px;
    }

    p.Quote {
        font-size: 32px;
    }

    div>p.subtitle2 {
        font-size: 60px;
        left: 26%;
    }

    /* Game Selection Overlay */
    div.Storysummary {
        width: 400px;
        height: 300px;
    }

    div>p#SummaryText {
        font-size: 60px;
    }

    div>p#SummaryTextSubtitle {
        width: 500px;
        font-size: 18px;
    }

    button.Button {
        font-size: 24px;
        width: 220px;
        height: 55px;
    }
}

